fix scrollbar issue

--- a/styles/404.css
+++ b/styles/404.css
@@ -1,17 +1,16 @@
 body{
-    background-color: #008fc1;
+    background-color: #f8bdf5;
     font-family: 'Roboto', 'sans-serif';
 }
 main{
     display: flex;
-    height: 100vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 .header404{
-    font-family: 'Chango', cursive;
-    font-size: 48px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif, cursive;
+    font-size: 60px;
 }
 .content404{
     text-align: center;
